# AsterWin

./: CMakeLists.txt  README.md
res/: BASSConfig.cmake
src/: Asteroids.cpp  CMakeLists.txt
src/audio/: AudioController.hpp  AudioLib.cpp  AudioLib.hpp  CMakeLists.txt  Consts.hpp  ObjectSound.cpp  ObjectSound.hpp  SampleFlags.hpp  SampleId.hpp  SfxController.cpp  SfxController.hpp  SfxSample.cpp  SfxSample.hpp  SfxSamples.cpp  SfxSamples.hpp  Sound.cpp  Sound.hpp
src/audio/ut/: CMakeLists.txt  TestSfxSamples.cpp
src/audio/ut/mocks/: MockAudioController.hpp  MockAudioLib.hpp  MockSfxController.hpp  MockSfxSamples.hpp
src/common/: HighScore.hpp
src/common/testing/: mocks.hpp
src/game/: Asteroid.cpp  Asteroid.hpp  Bonuses.cpp  Bonuses.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Consts.cpp  Consts.hpp  Game.cpp  Game.hpp  GameArea.cpp  GameArea.hpp  GameConsts.hpp  Math.hpp  Object.cpp  Object.hpp  ObjectSound.cpp  ObjectSound.hpp  Rand.hpp  ScoreCounter.cpp  ScoreCounter.hpp  Ship.cpp  Ship.hpp  Sound.cpp  Sound.hpp  Time.cpp  Time.hpp  TimeDelta.hpp  Ufo.cpp  Ufo.hpp  World.cpp  World.hpp
src/game/geom/: Bounds.cpp  Bounds.hpp  CMakeLists.txt  CheckCollision.cpp  CheckCollision.hpp  Distance.cpp  Distance.hpp  LineIntersection.cpp  LineIntersection.hpp  PointInPolygon.cpp  PointInPolygon.hpp  PolygWithPointCheck.cpp  PolygWithPointCheck.hpp  Transform.cpp  Transform.hpp
src/game/geom/ut/: CMakeLists.txt  TestBounds.cpp  TestCheckCollision.cpp  TestDistance.cpp  TestPointInPolygon.cpp  TestPolygWithPointCheck.cpp  TestTransform.cpp
src/game/geom/ut/mocks/: MockLineIntersection.hpp  MockPolygWithPointCheck.hpp
src/game/objects/: AsterShards.cpp  AsterShards.hpp  Asteroid.cpp  Asteroid.hpp  Asteroids.hpp  BonusAddBullets.cpp  BonusAddBullets.hpp  BonusBulletSpeed.cpp  BonusBulletSpeed.hpp  BonusObject.cpp  BonusObject.hpp  BonusPoints.cpp  BonusPoints.hpp  Bonuses.cpp  Bonuses.hpp  Bullet.cpp  Bullet.fwd.hpp  Bullet.hpp  Bullets.hpp  CMakeLists.txt  Object.cpp  Object.fwd.hpp  Object.hpp  ObjectState.hpp  Objects.hpp  PowerUp.cpp  PowerUp.hpp  PowerUpAddBullets.cpp  PowerUpAddBullets.hpp  PowerUpBulletSpeed.cpp  PowerUpBulletSpeed.hpp  Ship.cpp  Ship.fwd.hpp  Ship.hpp  ShipShards.cpp  ShipShards.hpp  StarBlink.cpp  StarBlink.hpp  TempObject.cpp  TempObject.hpp  (+3 more)
src/game/objects/ut/: CMakeLists.txt  TestObject.cpp  TestTempObject.cpp
src/game/objects/ut/mocks/: MockObject.hpp
src/game/types/: BonusType.hpp  Bounds.hpp  Box.hpp  Color.hpp  GameState.hpp  ObjectGeom.hpp  Point.hpp  Position.hpp  Vector.hpp
src/game/types/ut/: CMakeLists.txt  TestColor.cpp
src/game/ut/: CMakeLists.txt  TestGameArea.cpp  TestMath.cpp  TestObject.cpp  TestRand.cpp  TestScoreCounter.cpp
src/game/ut/mocks/: MockTime.hpp  MockWorld.hpp
src/gl/: CMakeLists.txt  Color.hpp  GlUtils.hpp  Utils.cpp  Utils.hpp
src/gl/ut/mocks/: MockUtils.hpp
src/log/: Log.hpp  LogImpl.hpp
src/sound/: CMakeLists.txt  ObjectSound.cpp  Sound.hpp
src/ui/: Application.cpp  Application.hpp  CMakeLists.txt  Font.cpp  Font.hpp  MainWindow.cpp  MainWindow.hpp  Rectangle.hpp  Settings.cpp  Settings.hpp  TextControl.cpp  TextControl.hpp  Viewport.hpp
src/ui/gstate/: CMakeLists.txt  GameState.cpp  GameState.hpp  HighScoreState.cpp  HighScoreState.hpp  MenuState.cpp  MenuState.hpp  OptionsState.cpp  OptionsState.hpp  PlayState.cpp  PlayState.hpp  State.cpp  State.hpp  StateManager.cpp  StateManager.hpp
src/ui/ut/: CMakeLists.txt  TestSettings.cpp
src/utils/: CMakeLists.txt  Exception.hpp  PointInPolygon.hpp  Settings.hpp  TimeInterval.cpp  TimeInterval.hpp  Tools.cpp  Tools.hpp
src/utils/ut/: CMakeLists.txt  TestPointInPolygon.cpp  TestTimeInterval.cpp
src/utils/ut/mocks/: MockTimeInterval.hpp
